# python-subprojects

./: LICENSE  README.md
modules/module1/: pyproject.toml
modules/module1/module1/: module1.py
modules/module2/: pyproject.toml
modules/module2/module2/: module2.py
projects/project1/: pyproject.toml
projects/project1/project1/: __main__.py
projects/project1/tests/: test_project1.py
